# bluemist-ai

./: .readthedocs.yml  LICENSE  MANIFEST.in  README.md  generate_api.py  logging.config  main.py  mainPipelineTest.py  predict.py  requirements-llm.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py
_readthedocs/doctrees/: bluemist.artifcats.doctree  bluemist.doctree  bluemist.pipeline.doctree  bluemist.preprocessing.doctree  bluemist.regression.doctree  bluemist.utils.doctree  index.doctree
_readthedocs/html/: bluemist.html  (+9 more)
api/: predict.py
bluemist/: __init__.py  environment.py  logging.config  logging_with_console_printing.config  main.py  mainPipelineTest.py  requirements.txt
datasource/: __init__.py  aws.py  database.py  extract_data.py
docs/: CNAME  bluemist.coming_soon.rst  bluemist.configure_environment.rst  bluemist.datasource.rst  bluemist.experiment_tracking.rst  bluemist.llm.rst  bluemist.model_deployment.rst  bluemist.regression.rst  classification.rst  conf.py  index.rst  modules.rst  preprocessing.rst  regression.rst  regression.tuning.rst  utils.rst
docs_123/: classification.rst  conf.py  main.rst  mainPipelineTest.rst  preprocessing.rst  regression.tuning.rst
pipeline/: bluemist_pipeline.py  preprocessing_pipeline.py
preprocessing/: __init__.py  categorical_transformer.py  numeric_transformer.py  preprocessor.py
regression/: __init__.py  lasso.py  linear.py  overridden_estimators.py  regression.py  regressor.py  ridge.py  ridge_cv.py  sgd.py  supported_algorithms.py
utils/: datahandler.py  metrics.py  scaler.py
(+292 files in other folders)
