[metadata]
name = bluemist
version = 0.1.1.1
url = https://github.com/shashanka89/bluemist-ai
author = Shashank Agrawal
author_email = shashanka89@gmail.com
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT

[options]
include_package_data = True
python_requires = >=3.9