[metadata]
name = bluemist
version = 0.1.1.2
url = https://github.com/shashanka89/bluemist-ai
author = Shashank Agrawal
author_email = shashanka89@gmail.com
description = My package description
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT

[options]
include_package_data = True
python_requires = >=3.9