[metadata]
name = bluemist
version = 0.1.1.13
url = https://github.com/mist-projects/bluemist-ai
author = Shashank Agrawal
author_email = dew@bluemist-ai.one
description = Bluemist AI is a low code machine learning library written in Python to develop, evaluate and deploy automated ML pipleines.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT

[options]
include_package_data = True
python_requires = >=3.9